target/ocp/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redeban-api-sp-sms
  labels:
    app: redeban-api-sp-sms
    version: "1.0.2"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: redeban-api-sp-sms
  template:
    metadata:
      labels:
        app: redeban-api-sp-sms
        version: "1.0.2"
    spec:
      containers:
      - name: redeban-api-sp-sms
        image: "default-route-openshift-image-registry.apps-crc.testing/redeban-transversal/redeban-api-sp-sms:1.0.2"
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
          name: http
        readinessProbe:
          httpGet:
            path: /redeban/sms/q/health/ready
            port: http
          initialDelaySeconds: 10
          periodSeconds: 10
        livenessProbe:
          httpGet:
            path: /redeban/sms/q/health/live
            port: http
          initialDelaySeconds: 30
          periodSeconds: 20
        startupProbe:
          httpGet:
            path: /redeban/sms/q/health
            port: http
          initialDelaySeconds: 5
          failureThreshold: 30
          periodSeconds: 2
        resources:
          requests:
            cpu: "100m"
            memory: "256Mi"
          limits:
            cpu: "500m"
            memory: "512Mi"
